--- a/pom.xml
+++ b/pom.xml
@@ -1,205 +1,195 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>de.dhbw.woped</groupId>
-	<artifactId>WoPeD-Process2Text</artifactId>
-	<version>3.8.0-SNAPSHOT</version>
-	<name>WoPeD-Process2Text</name>
-	<description>WoPed webservice p2t</description>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.1.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>de.dhbw.woped</groupId>
+    <artifactId>WoPeD-Process2Text</artifactId>
+    <version>3.8.0-SNAPSHOT</version>
+    <name>WoPeD-Process2Text</name>
+    <description>WoPed webservice p2t</description>
 
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+    <properties>
+        <java.version>11</java.version>
+    </properties>
 
-	<repositories>
-		<repository>
-			<id>data-local</id>
-			<name>data</name>
-			<url>file://${project.basedir}/lib</url>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>local-maven-repository</id>
+            <url>file:///${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 
-	<distributionManagement>
-		<repository>
-			<id>nexus-releases</id>
-			<url>http://vesta.dh-karlsruhe.de/nexusdocker/repository/maven-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<url>http://vesta.dh-karlsruhe.de/nexusdocker/repository/maven-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jwordnet</groupId>
+            <artifactId>jwnl</artifactId>
+            <version>1.4_rc3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- Workspace Dependencies -->
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>bpstruct</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>hpi-bpt</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t.javax</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>pnapi-java</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>resolver</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>rpw</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>rpw-lkb</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>serializer</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>uma</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>xalan</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.woped.p2t</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.jwordnet</groupId>
-			<artifactId>jwnl</artifactId>
-			<version>1.4_rc3</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<!-- Workspace Dependencies -->
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>bpstruct</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>hpi-bpt</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>json</artifactId>
-			<version>20180130</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>pnapi-java</artifactId>
-			<version>1.0.5</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>resolver</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>rpw</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>rpw-lkb</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>serializer</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>uma</artifactId>
-			<version>1.2.4</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>xalan</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>PLATZHALTER</groupId>
-			<artifactId>xercesImpl</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<!-- <dependency> <groupId>PLATZHALTER</groupId> <artifactId>xml-apis</artifactId> 
-			<version>0</version> <scope>system</scope> <systemPath>${project.basedir}/lib/xml-apis.jar</systemPath> 
-			</dependency> -->
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-prometheus</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<includeSystemScope>true</includeSystemScope>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>3.0.0-M1</version>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy_nlptools.wordnet.dict</id>
-						<phase>install</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<copy todir="${basedir}/target/src/main/resources">
-									<fileset dir="${basedir}/src/main/resources"
-										includes="**/*" />
-								</copy>
-							</tasks>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy_nlptools.wordnet.dict</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <copy todir="${basedir}/target/src/main/resources">
+                                    <fileset dir="${basedir}/src/main/resources"
+                                             includes="**/*"/>
+                                </copy>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
