refactor: Adhere to best practices in controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.de.dhbw.woped.process2text = DEBUG
+logging.level.de.dhbw.woped.process2text = INFO
 server.port=8080
 server.servlet.context-path=/p2t
 management.endpoints.web.exposure.include=health,info,prometheus
