ci: Disable maven transfer progress

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Build
-        run: mvn clean install -Dmaven.test.skip=true
+        run: mvn clean install -Dmaven.test.skip=true --no-transfer-progress
 
       - name: Set Release version env variable
         run: |
