--- a/pom.xml
+++ b/pom.xml
@@ -173,29 +173,30 @@
                 <version>3.0.0-M1</version>
             </plugin>
             <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy_nlptools.wordnet.dict</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <copy todir="${basedir}/target/src/main/resources">
-                                    <fileset dir="${basedir}/src/main/resources"
-                                             includes="**/*"/>
-                                </copy>
-                            </tasks>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+    <artifactId>maven-antrun-plugin</artifactId>
+    <version>3.0.0</version>
+    <executions>
+        <execution>
+            <id>copy_nlptools.wordnet.dict</id>
+            <phase>install</phase>
+            <goals>
+                <goal>run</goal>
+            </goals>
+            <configuration>
+                <target>
+                    <copy todir="${basedir}/target/src/main/resources">
+                        <fileset dir="${basedir}/src/main/resources"
+                                 includes="**/*"/>
+                    </copy>
+                </target>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.22.8</version>
+                <version>2.43.0</version>
                 <configuration>
                     <formats>
                         <format>
@@ -219,7 +220,7 @@
                         <importOrder/>
                         <removeUnusedImports/>
                         <googleJavaFormat>
-                            <version>1.8</version>
+                            <version>1.17.0</version>
                             <style>GOOGLE</style>
                             <reflowLongStrings>true</reflowLongStrings>
                             <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
