--- a/pom.xml
+++ b/pom.xml
@@ -232,12 +232,12 @@
                         <id>spotless-check</id>
                         <phase>compile</phase>
                         <goals>
-                            <goal>check</goal>
+                            <goal>apply</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
+    
 </project>
