Changed static EnumGPTModel usage to OpenAI API Request for GPT-Models
Deleted the EnumGPTModel class with static GPT-Models as String to a API Request Call from OpenAI in the P2TLLMService to get all Models.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ logging.level.de.dhbw.woped.process2text = INFO
 server.port=8080
 server.servlet.context-path=/p2t
 management.endpoints.web.exposure.include=health,info,prometheus
+
+# logger datei 
+logging.file=logs/p2t.log
